tests/parser-test-files/bad-files/parse-type.1.error
error: Malformed type
  --> test:4:17
   |
 4 |  (declare f (T -> (G)))
   |                   ^^^ unexpected nullary type
